fix: in dark mode, code sections in masonry tiles have low contrast

--- a/pdl-live-react/src/view/code/PreviewLight.css
+++ b/pdl-live-react/src/view/code/PreviewLight.css
@@ -4,6 +4,6 @@
 }
 
 .pf-v6-theme-dark .pdl-preview-light {
-  background-color: #1f1f1f50 !important;
+  background-color: #1f1f1f85 !important;
   border: 1px solid #29292980;
 }
